<!--
/*
 * Copyright 2017.  Akshay Jain
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<resources>
    <string name="app_name">PopularMovies</string>
    <string name="action_settings">Settings</string>
    <string name="movie_item_content_description">Image view in frame layout to display movies poster</string>
    <string name="title_activity_movie_details">MovieDetails</string>
    <string name="string_sort_by">Sort by</string>
    <string name="string_popular">Popular</string>
    <string name="string_top_rated">Top rated</string>
    <string name="placeholder_movie_title">Beauty and the Beast</string>
    <string name="max_rating">/10</string>
    <string name="online_status">You are online!!!!</string>
    <string name="notOnline_status">You are not online!!!!</string>
    <string name="noInternet_status">No internet connection!</string>
    <string name="user_image_content_desc">default image loaded for user</string>
    <string name="string_favourite">Favourite</string>
    <string name="placeholder_user_review">Very epic movie, strong storyline and also stunning graphics..
        This is very recommended movie to watch with entire family.</string>
    <string name="placeholder_user_name">HELLO</string>
    <string name="movie_poster_content_desc">movie poster, also on clicking launches trailer of movie</string>
    <string name="video_prev_play_content_desc">preview play placeholder image on top of image poster</string>
    <string name="movie_popularity_icon_desc">movie popularity icon</string>
    <string name="movie_rating_icon_desc">movie rating icon</string>
    <string name="movie_release_date_icon_desc">movie release date icon</string>
    <string name="expand_collapse_image_button_desc">expand collapse image button</string>
    <string name="mark_favourite_text">Mark as Favourite</string>
    <string name="mark_unfavourite_text">Mark as Unfavourite</string>
    <string name="movieFavourite_status">Movie added to favourite!</string>
    <string name="movieNotFavourite_status">Movie removed from favourite!</string>
    <string name="placeholder_movie_votes">3441 votes</string>
    <string name="placeholder_movie_rating">7.8/10</string>
    <string name="placeholder_movie_genre">Science Fiction | Science Fiction | Science Fiction</string>
    <string name="placeholder_release_date">Sep 17, 2017</string>
    <string name="placeholder_hello_world_text">Hello World</string>
    <string name="placeholder_movie_popularity">78%</string>
    <string name="placeholder_movie_overview">Minions Stuart, Kevin and Bob are recruited by Scarlet Overkill,
        a super-villain who, alongside her inventor husband Herb, hatches a plot to take over the world.</string>
</resources>
