<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/sort_by_padding"
        android:textAlignment="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/sort_by_right_padding"
            android:text="@string/string_sort_by" />

        <CheckBox
            android:id="@+id/checkbox_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/string_popular"
            android:textSize="@dimen/sort_by_type_textsize" />

        <CheckBox
            android:id="@+id/checkbox_top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_top_rated"
            android:textSize="@dimen/sort_by_type_textsize" />

        <CheckBox
            android:id="@+id/checkbox_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_favourite"
            android:textSize="@dimen/sort_by_type_textsize" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:context=".MovieFragment" />

</LinearLayout>