<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright 2017.  Akshay Jain
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/padding_md_very_large"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailer_recycler_view"
            android:layout_width="@dimen/dimen_md_zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_md_medium"
            android:scrollbars="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expand_text_view"/>

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="@dimen/dimen_md_zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_md_medium"
            android:layout_marginLeft="@dimen/margin_md_medium"
            android:layout_marginRight="@dimen/margin_md_medium"
            android:layout_marginStart="@dimen/margin_md_medium"
            android:layout_marginTop="@dimen/margin_md_very_large"
            android:text="@string/placeholder_movie_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="#4885ed"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="@dimen/md_poster_width"
            android:layout_height="@dimen/md_poster_height"
            android:layout_marginEnd="@dimen/margin_md_medium"
            android:layout_marginRight="@dimen/margin_md_medium"
            android:layout_marginTop="@dimen/margin_md_medium"
            android:contentDescription="@string/movie_poster_content_desc"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/movie_title"
            app:layout_constraintRight_toRightOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_genre"/>

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_md_medium"
            android:layout_marginEnd="@dimen/margin_md_medium"
            android:layout_marginLeft="@dimen/margin_md_medium"
            android:layout_marginRight="@dimen/margin_md_medium"
            android:layout_marginStart="@dimen/margin_md_medium"
            android:layout_marginTop="@dimen/margin_md_large"
            android:text="@string/placeholder_movie_genre"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="#666666"
            android:textSize="@dimen/text_md_medium"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@+id/movie_title"
            app:layout_constraintRight_toRightOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"/>

        <ImageView
            android:id="@+id/movie_popularity_icon"
            android:layout_width="@dimen/icons_md_dimen"
            android:layout_height="@dimen/icons_md_dimen"
            android:layout_marginEnd="@dimen/margin_md_medium"
            android:layout_marginLeft="@dimen/margin_md_max"
            android:layout_marginRight="@dimen/margin_md_medium"
            android:layout_marginStart="@dimen/margin_md_max"
            android:layout_marginTop="@dimen/margin_md_medium"
            android:background="@drawable/popularity1"
            android:contentDescription="@string/movie_popularity_icon_desc"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintLeft_toRightOf="@+id/movie_poster"
            app:layout_constraintRight_toRightOf="@+id/movie_genre"
            app:layout_constraintTop_toBottomOf="@+id/movie_genre"/>

        <TextView
            android:id="@+id/movie_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_md_medium"
            android:layout_marginLeft="@dimen/margin_md_medium"
            android:layout_marginStart="@dimen/margin_md_medium"
            android:layout_marginTop="@dimen/margin_md_medium"
            android:text="@string/placeholder_movie_popularity"
            android:textColor="#333"
            android:textSize="@dimen/text_md_max"
            app:layout_constraintBottom_toBottomOf="@+id/movie_popularity_icon"
            app:layout_constraintLeft_toRightOf="@+id/movie_popularity_icon"
            app:layout_constraintTop_toTopOf="@+id/movie_popularity_icon"/>

        <ImageView
            android:id="@+id/movie_rating_icon"
            android:layout_width="@dimen/icons_md_dimen"
            android:layout_height="@dimen/icons_md_dimen"
            android:layout_marginTop="@dimen/margin_md_large"
            android:background="@drawable/rating"
            android:contentDescription="@string/movie_rating_icon_desc"
            app:layout_constraintLeft_toLeftOf="@+id/movie_popularity_icon"
            app:layout_constraintTop_toBottomOf="@+id/movie_popularity_icon"/>

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_movie_rating"
            android:textColor="#333"
            android:textSize="@dimen/text_md_max"
            app:layout_constraintLeft_toLeftOf="@+id/movie_popularity"
            app:layout_constraintTop_toTopOf="@+id/movie_rating_icon"/>

        <TextView
            android:id="@+id/movie_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_md_medium"
            android:text="@string/placeholder_movie_votes"
            android:textColor="#666666"
            android:textSize="@dimen/text_md_small"
            app:layout_constraintBottom_toBottomOf="@+id/movie_rating_icon"
            app:layout_constraintLeft_toLeftOf="@+id/movie_rating"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating"/>

        <ImageView
            android:id="@+id/movie_release_date_icon"
            android:layout_width="@dimen/icons_md_dimen"
            android:layout_height="@dimen/icons_md_dimen"
            android:layout_marginTop="@dimen/margin_md_large"
            android:background="@drawable/release_date"
            android:contentDescription="@string/movie_release_date_icon_desc"
            app:layout_constraintLeft_toLeftOf="@+id/movie_rating_icon"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating_icon"/>

        <TextView
            android:id="@+id/movie_releaseDate"
            android:layout_width="@dimen/md_rel_date_width"
            android:layout_height="@dimen/dimen_md_zero"
            android:layout_marginEnd="@dimen/margin_md_medium"
            android:layout_marginLeft="@dimen/margin_md_medium"
            android:layout_marginRight="@dimen/margin_md_medium"
            android:layout_marginStart="@dimen/margin_md_medium"
            android:layout_marginTop="@dimen/margin_md_medium"
            android:text="@string/placeholder_release_date"
            android:textColor="#333"
            android:textSize="@dimen/text_md_large"
            app:layout_constraintBottom_toBottomOf="@+id/movie_release_date_icon"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/movie_release_date_icon"
            app:layout_constraintRight_toRightOf="@+id/movie_title"
            app:layout_constraintTop_toTopOf="@+id/movie_release_date_icon"
            app:layout_constraintVertical_bias="0.0"/>

        <ToggleButton
            android:id="@+id/movie_favourite_button"
            android:layout_width="@dimen/md_favourite_btn_width"
            android:layout_height="@dimen/md_favourite_btn_height"
            android:layout_marginBottom="@dimen/margin_md_medium"
            android:layout_marginEnd="@dimen/margin_md_medium"
            android:layout_marginLeft="@dimen/margin_md_medium"
            android:layout_marginRight="@dimen/margin_md_medium"
            android:layout_marginStart="@dimen/margin_md_medium"
            android:layout_marginTop="@dimen/margin_md_medium"
            android:background="@drawable/rounded_corner"
            android:textAlignment="center"
            android:textOff="@string/mark_favourite_text"
            android:textOn="@string/mark_unfavourite_text"
            android:textSize="@dimen/text_md_medium"
            app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
            app:layout_constraintLeft_toLeftOf="@+id/movie_release_date_icon"
            app:layout_constraintRight_toRightOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_release_date_icon"
            app:layout_constraintVertical_bias="0.45"
            />

        <View
            android:id="@+id/view7"
            android:layout_width="@dimen/dimen_md_zero"
            android:layout_height="10dp"
            android:layout_marginTop="@dimen/margin_md_small"
            android:background="#ccc"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"/>

        <com.ms.square.android.expandabletextview.ExpandableTextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
            android:id="@+id/expand_text_view"
            android:layout_width="@dimen/dimen_md_zero"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@+id/movie_poster"
            app:layout_constraintRight_toRightOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/view7"
            expandableTextView:animDuration="200"
            expandableTextView:maxCollapsedLines="3">

            <TextView
                android:id="@id/expandable_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_md_zero"
                android:layout_marginTop="@dimen/margin_md_small"
                android:padding="@dimen/padding_md_small"
                android:text="@string/placeholder_movie_overview"
                android:textColor="#666666"
                android:textSize="@dimen/text_md_very_large"/>

            <ImageButton
                android:id="@id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:background="@android:color/transparent"
                android:contentDescription="@string/expand_collapse_image_button_desc"
                android:padding="@dimen/padding_md_medium"/>
        </com.ms.square.android.expandabletextview.ExpandableTextView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_recycler_view"
            android:layout_width="@dimen/dimen_md_zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_md_medium"
            android:scrollbars="vertical"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/padding_md_very_large"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/movie_poster"
            app:layout_constraintRight_toRightOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/trailer_recycler_view"
            app:layout_constraintVertical_bias="0.0"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>